# hashit

./: Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: ci-image.yml
src/: lib.rs  main.rs
