[package]
name = "hashit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive","color","help"] }
hex = "0.4.3"
sha256 = "1.5.0"
sha3 = "0.10.8"
tiny-keccak = { version = "2.0.0", features = ["keccak"] }
